# lpeg

./: CMakeLists.txt
cmake/: LPEGConfig.cmake.in
